<resources>
    <string name="app_name">ECRM Teacher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username">Tài khoản</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">ĐĂNG NHẬP</string>
    <string name="action_change_pass">Update Password</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="checkingConnection">Đang kiểm tra kết nối…</string>
    <string name="noConnection">Không thể kết nối tới máy chủ!</string>
    <string name="tryAgain">Kiểm tra</string>
    <string name="tabClassroom">CLASSROOM</string>
    <string name="tabAccount">ACCOUNT</string>
    <string name="no_class">You are not teaching is any class!</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Nhập mật khẩu mới</string>
    <string name="confirm_password">Xác nhận mật khẩu mới</string>
    <string name="change_pass">ĐỔI MẬT KHẨU</string>
    <string name="action_create_report">Tạo Báo Cáo</string>
    <string name="no_shedule_found">Bạn không có lịch dạy ngày hôm nay!</string>
    <string name="highlight_image">Highlight Image</string>
    <string name="action_send_report">Send Report</string>
    <string name="suggest">Đề xuất của bạn:</string>
    <string name="description">Đánh giá của bạn</string>
    <string name="prompt_description">Nhập mô tả chi tiết</string>
    <string name="press_back_to_cancel">Nhấn nút Back để quay lại </string>
    <string name="alert">Thông báo</string>
    <string name="cancel">Hủy</string>
    <string name="placeholder_lorem_ipsum">Lorem ipsum dolor set it</string>
    <string name="action_about">About</string>
    <string name="action_ok">Gửi Báo Cáo</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="no_report_found">Không có báo cáo nào</string>
    <string name = "ok">OK</string>
    <string name="logout">Đăng xuất khỏi hệ thống ? Bạn sẽ không thể sử dụng nếu không đăng nhập</string>
    <string name="remove">Bạn có chắc chắn muốn xóa báo cáo này ?</string>
    <string name = "remove_title">Xóa báo cáo</string>
    <string name="report_success">Gửi báo cáo thành công! Báo cáo của bạn đã được lưu vào hệ thống</string>
    <string name="sendreport_title">Bạn có muốn đổi phòng không?</string>
    <string name="update_title">Sửa báo cáo</string>
    <string name="license">
        Copyright 2015 chenupt
        \n\n
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        \n\n
        http://www.apache.org/licenses/LICENSE-2.0
        \n\n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>

    <string name="number1">Number 1</string>
    <string name="number2">Number 2</string>
    <string name="button">Buton</string>


    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Trang chủ</item>
        <item >Lịch dạy</item>
        <item >Báo cáo của bạn</item>
        <item> Đổi mật khẩu</item>
        <item >Đăng xuất</item>

    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
    <item>@mipmap/ic_launcher</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>
