<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:descendantFocusability="beforeDescendants"
    android:background="@mipmap/classroom"
    android:focusableInTouchMode="true">



    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical" android:paddingTop="60dp">

                <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                    android:layout_height="match_parent" android:orientation="vertical"
                    android:paddingTop="20dp">

                    <EditText android:id="@+id/current_password" android:layout_width="match_parent"
                        android:layout_height="40dp" android:hint="@string/current_password"
                        android:inputType="text" android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textSize="20dp"
                        android:paddingLeft="10dp"
                        android:background="@color/white"
                        android:textColorHint="#ffa3a3a3"
                        android:textColor="#000000" />

                    <EditText android:id="@+id/new_password" android:layout_width="match_parent"
                        android:layout_height="40dp" android:hint="@string/new_password"
                        android:imeActionLabel="@string/action_sign_in"
                        android:inputType="textPassword"
                        android:maxLines="1" android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        android:textColorHint="#ffa3a3a3"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        android:textSize="20dp"/>
                    <EditText android:id="@+id/confirm_password" android:layout_width="match_parent"
                        android:layout_height="40dp" android:hint="@string/confirm_password"
                        android:imeActionLabel="@string/action_sign_in"
                        android:inputType="textPassword"
                        android:maxLines="1" android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        android:textColorHint="#ffa3a3a3"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        android:textSize="20dp"/>

                    <Button android:id="@+id/change_password_button" style="?android:textAppearanceSmall"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginTop="16dp" android:text="@string/change_pass"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="#ffffffff"
                        android:background="#fffc571b" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>