<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/number1"
            android:id="@+id/textView"
            android:layout_marginTop="37dp" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtNumber1"
            android:layout_marginStart="37dp" android:layout_alignBottom="@+id/textView"
            android:layout_toEndOf="@+id/textView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/number2"
            android:id="@+id/textView8" android:layout_below="@+id/txtNumber1" android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtNumber2" android:layout_alignBottom="@+id/textView8"
            android:layout_alignStart="@+id/txtNumber1"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:id="@+id/button"
            android:onClick="plus"
            android:layout_marginTop="44dp" android:layout_below="@+id/txtNumber2"
            android:layout_alignStart="@+id/txtNumber2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@mipmap/ic_launcher"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


</RelativeLayout>